# option_price_faas

./: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json  tst.rs
.github/workflows/: benchmark.yml  benchmarkcharts.yml  deploy.yml  release-tf.yml  release.yml  test.yml
benches/: option_price_bench_faas.rs
docker/: option_price.Dockerfile  option_price_auth.Dockerfile
docs/: gcp_auth.yml  openapi_gcp.yml  openapi_rapidapi.yml  openapi_v2.yml  rapidapi_auth.yml  references.yml  spec.yml
option prices varying strike/OneStrike/report/: index.html
option prices varying strike/SevenStrike/report/: index.html
option prices varying strike/SixtyStrike/report/: index.html
option prices varying strike/cgmy/OneStrike/base/: estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/OneStrike/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/OneStrike/report/: index.html
option prices varying strike/cgmy/SevenStrike/base/: estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/SevenStrike/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/SevenStrike/report/: index.html
option prices varying strike/cgmy/SixtyStrike/base/: estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/SixtyStrike/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
option prices varying strike/cgmy/SixtyStrike/report/: index.html
option prices varying strike/cgmy/report/: index.html
option prices varying strike/heston/OneStrike/base/: benchmark.json  sample.json  tukey.json
option prices varying strike/heston/OneStrike/new/: estimates.json  raw.csv
option prices varying strike/heston/OneStrike/report/: index.html
option prices varying strike/heston/SevenStrike/base/: benchmark.json  sample.json
option prices varying strike/heston/SevenStrike/new/: estimates.json  raw.csv  (+1 more)
option prices varying strike/heston/report/: index.html
option prices varying strike/merton/report/: index.html
option prices varying strike/report/: index.html
option prices varying strike/vasicek/report/: index.html
option prices varying u/1024/report/: index.html
option prices varying u/128/report/: index.html
option prices varying u/256/report/: index.html
option prices varying u/512/report/: index.html
option prices varying u/CGMY/report/: index.html
option prices varying u/cgmy/report/: index.html
option prices varying u/heston/report/: index.html
option prices varying u/merton/report/: index.html
option prices varying u/report/: index.html
report/: index.html
src/lib/: auth.rs  calibration_maps.rs  constants.rs  constraints.rs  lib.rs  maps.rs  pricing_maps.rs
techdoc/: OptionCalculation.Rnw  OptionCalibration-concordance.tex  OptionCalibration.Rnw  OptionCalibration.aux  OptionCalibration.tex  techdoc_cgmy.json  techdoc_cgmy_actual.json  techdoc_heston.json  techdoc_heston_actual.json  techdoc_merton.json  techdoc_merton_actual.json
terraform/: build_esp.sh  cloud-run.tf  iam.tf  output.tf  project.tf  terraform.tfvars  vars.tf
terraform/app/: project.tf  vars.tf
terraform/service/: output.tf  service.tf  vars.tf
terraform/setup/: main.tf
tests/: calibrator.test.js  constraints.test.js  density.test.js  example_calibration.json  example_calibration_2.json  example_calibration_3.json  index.js  integration_test.sh  pricer.test.js  riskmetric.test.js  swagger_validator.js
(+211 files in other folders)
