[package]
name = "pricer"
version = "2.1.1"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/realoptions/option_price_faas"
repository = "https://github.com/realoptions/option_price_faas"
readme = "README.md"
license = "MIT"
description = "Option pricer"
autobins = false
edition = "2018"

[dependencies]
fang_oost_option = "0.31.0"
fang_oost = "0.14.0"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
cf_dist_utils = "0.9.0"
rayon = "1.0.1"
black_scholes = "0.5.0"
cf_functions = "0.14"
num-complex = "0.2"
rocket = "0.4.5"
sha2 = "0.9.1"
hex-literal = "0.3.1"
argmin = "0.3"
finitediff = "0.1"
rand = "0.5"
cuckoo = "0.8"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dev-dependencies]

approx = "0.2.0"
criterion = "0.2"

[badges]
codecov = { repository = "realoptions/option_price_faas", branch = "master", service = "github" }

[[bin]]
name = "option_price"
path = "src/bin/option_price.rs"

[[bin]]
name = "option_price_auth"
path = "src/bin/option_price_auth.rs"

[lib]
name = "utils"
path = "src/lib/lib.rs"


[[bench]]
name = "option_price_bench_faas"
harness = false

