[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
autobins = false
description = "Option pricer"
edition = "2018"
homepage = "https://github.com/realoptions/option_price_faas"
license = "MIT"
name = "pricer"
readme = "README.md"
repository = "https://github.com/realoptions/option_price_faas"
version = "3.0.0"

[dependencies]
black_scholes = "0.5.0"
cf_dist_utils = "0.9.0"
cf_functions = "0.14"
fang_oost = "0.14"
fang_oost_option = "0.31"
hex-literal = "0.3.1"
nlopt = "0.5.2"
num-complex = "0.2"
rand = "0.5"
rayon = "1.5"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
sha2 = "0.9.1"

[dev-dependencies]
approx = "0.2.0"
criterion = "0.3"

[badges]
codecov = {repository = "realoptions/option_price_faas", branch = "master", service = "github"}

[[bin]]
bench = false
name = "option_price"
path = "src/bin/option_price.rs"

[[bin]]
bench = false
name = "option_price_auth"
path = "src/bin/option_price_auth.rs"

[[bin]]
bench = false
name = "generate_docs"
path = "src/bin/generate_docs.rs"

[lib]
bench = false
name = "utils"
path = "src/lib/lib.rs"

[[bench]]
harness = false
name = "option_price_bench_faas"
