[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
autobins = false
description = "Option pricer"
edition = "2018"
homepage = "https://github.com/realoptions/option_price_faas"
license = "MIT"
name = "pricer"
readme = "README.md"
repository = "https://github.com/realoptions/option_price_faas"
version = "3.1.1"

[dependencies]
black_scholes = "0.7.1"
cf_dist_utils = "0.10"
cf_functions = "^0.16"
fang_oost = "^0.15.1"
fang_oost_option = "0.32"
hex-literal = "0.3.1"
num-complex = "0.2"
rayon = "1.5"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
sha2 = "0.9.1"

[dev-dependencies]
approx = "0.2.0"
rand = { version = "0.8", features = ["std_rng"] }

[badges]
codecov = { repository = "realoptions/option_price_faas", branch = "master", service = "github" }

[[bin]]
bench = false
name = "option_price"
path = "src/bin/option_price.rs"

[[bin]]
bench = false
name = "option_price_auth"
path = "src/bin/option_price_auth.rs"

[lib]
bench = false
name = "utils"
path = "src/lib/lib.rs"

[profile.bench]
lto = true
